Fix overflowing header buttons and add oppins font

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -4,8 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+*{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+.font-poppins{
+  font-family: "Poppins", sans-serif;
 }
